# discreture

./: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  scheduled-1.5.yml
docs/: README.md
scripts/: bootstrap-template.py
src/: discreture_extension.cpp
src/include/: discreture_extension.hpp
test/: README.md
test/sql/: discreture.test
vcpkg-overlay/discreture/: portfile.cmake  vcpkg.json
